test_regress/t/t_package_local_bad.out
%Error: t/t_package_local_bad.v:9:16: Illegal 'local::' outside 'randomize() with' (IEEE 1800-2023 18.7.1)
    9 |       $display(local::x);
      |                ^~~~~
%Error: Exiting due to
